Apache Tez Change Log
=====================


Release 0.8.1: Unreleased

INCOMPATIBLE CHANGES

ALL CHANGES:
  TEZ-2294. Add tez-site-template.xml with description of config properties.
  TEZ-2757. Fix download links for Tez releases.
  TEZ-2742. VertexImpl.finished() terminationCause hides member var of the
  same name
  TEZ-2747. Update master to reflect 0.8.0-alpha release.
  TEZ-2662. Provide a way to check whether AM or task opts are valid and error if not.
  TEZ-2739. Improve handling of read errors in critical path analyzer

Release 0.8.0-alpha: 2015-09-01

INCOMPATIBLE CHANGES
  TEZ-2048. Remove VertexManagerPluginContext.getTaskContainer()
  TEZ-2565. Consider scanning unfinished tasks in VertexImpl::constructStatistics to reduce merge overhead.
  TEZ-2468. Change the minimum Java version to Java 7.

ALL CHANGES:
  TEZ-2749. TaskInfo in history parser should not depend on the apache directory project. Fix master build against hadoop-2.4
  TEZ-2748. Fix master build against hadoop-2.2. 
  TEZ-2743. Fix TezContainerLauncher logging tokens.
  TEZ-2708. Rename classes and variables post TEZ-2003 changes.
  TEZ-2740. Create a reconfigureVertex alias for deprecated
  setVertexParallelism API
  TEZ-2690. Add critical path analyser
  TEZ-2734. Add a test to verify the filename generated by OnDiskMerge.
  TEZ-2732. DefaultSorter throws ArrayIndex exceptions on 2047 Mb size sort buffers
  TEZ-2687. ATS History shutdown happens before the min-held containers are released
  TEZ-2629. LimitExceededException in Tez client when DAG has exceeds the default max counters
  TEZ-2730. tez-api missing dependency on org.codehaus.jettison for json.
  TEZ-2719. Consider reducing logs in unordered fetcher with shared-fetch option
  TEZ-2646. Add scheduling casual dependency for attempts
  TEZ-2647. Add input causality dependency for attempts
  TEZ-2633. Allow VertexManagerPlugins to receive and report based on attempts
  instead of tasks