@@ -27,6 +27,7 @@ import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicReference;
 
 
+import com.google.common.annotations.VisibleForTesting;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.apache.hadoop.classification.InterfaceAudience;
@@ -76,8 +77,10 @@ public class Shuffle implements ExceptionReporter {
   private final InputContext inputContext;
   
   private final ShuffleInputEventHandlerOrderedGrouped eventHandler;
-  private final ShuffleScheduler scheduler;
-  private final MergeManager merger;
+  @VisibleForTesting
+  final ShuffleScheduler scheduler;
+  @VisibleForTesting
+  final MergeManager merger;
 
   private final CompressionCodec codec;
   private final boolean ifileReadAhead;
@@ -290,11 +293,19 @@ public class Shuffle implements ExceptionReporter {
           throw new ShuffleError("Error during shuffle", e);
         }
       }
+      // The ShuffleScheduler may have exited cleanly as a result of a shutdown invocation
+      // triggered by a previously reportedException. Check before proceeding further.s
+      synchronized (Shuffle.this) {
+        if (throwable.get() != null) {
+          throw new ShuffleError("error in shuffle in " + throwingThreadName,
+              throwable.get());
+        }
+      }
 
       shufflePhaseTime.setValue(System.currentTimeMillis() - startTime);
 
       // stop the scheduler
-      cleanupShuffleScheduler(false);
+      cleanupShuffleScheduler();
 
       // Finish the on-going merges...
       TezRawKeyValueIterator kvIter = null;
@@ -321,20 +332,18 @@ public class Shuffle implements ExceptionReporter {
     }
   }
 
-  private void cleanupShuffleScheduler(boolean ignoreErrors) throws InterruptedException {
+  private void cleanupShuffleSchedulerIgnoreErrors() {
+    try {
+      cleanupShuffleScheduler();
+    } catch (InterruptedException e) {
+      Thread.currentThread().interrupt();
+      LOG.info("Interrupted while attempting to close the scheduler during cleanup. Ignoring");
+    }
+  }
 
+  private void cleanupShuffleScheduler() throws InterruptedException {
     if (!schedulerClosed.getAndSet(true)) {
-      try {
-        scheduler.close();
-      } catch (InterruptedException e) {
-        if (ignoreErrors) {
-          //Reset the status
-          Thread.currentThread().interrupt();
-          LOG.info("Interrupted while attempting to close the scheduler during cleanup. Ignoring");
-        } else {
-          throw e;
-        }
-      }
+      scheduler.close();
     }
   }
 
@@ -362,7 +371,7 @@ public class Shuffle implements ExceptionReporter {
 
   private void cleanupIgnoreErrors() {
     try {
-      cleanupShuffleScheduler(true);
+      cleanupShuffleSchedulerIgnoreErrors();
       cleanupMerger(true);
     } catch (Throwable t) {
       LOG.info("Error in cleaning up.., ", t);
@@ -370,16 +379,17 @@ public class Shuffle implements ExceptionReporter {
   }
 
   @Private
+  @Override
   public synchronized void reportException(Throwable t) {
     // RunShuffleCallable onFailure deals with ignoring errors on shutdown.
     if (throwable.get() == null) {
+      LOG.info("Setting throwable in reportException with message [" + t.getMessage() +
+          "] from thread [" + Thread.currentThread().getName());
       throwable.set(t);
       throwingThreadName = Thread.currentThread().getName();
       // Notify the scheduler so that the reporting thread finds the 
       // exception immediately.
-      synchronized (scheduler) {
-        scheduler.notifyAll();
-      }
+      cleanupShuffleSchedulerIgnoreErrors();
     }
   }
   
