@@ -7,6 +7,7 @@ Release 0.8.1: Unreleased
 INCOMPATIBLE CHANGES
 
 ALL CHANGES:
+  TEZ-2750. Shuffle may not shutdown in case of a fetch failure, causing it to hang.
   TEZ-2294. Add tez-site-template.xml with description of config properties.
   TEZ-2757. Fix download links for Tez releases.
   TEZ-2742. VertexImpl.finished() terminationCause hides member var of the
